--- a/stylesheets/scss/_general.scss
+++ b/stylesheets/scss/_general.scss
@@ -135,3 +135,11 @@ body {
   position: relative;
   width: 100%;
 }
+
+// Styling rules for gallery
+.pswp {
+
+  &.pswp--open {
+    z-index: 30001;
+  }
+}
